--- a/.github/workflows/spotless.yml
+++ b/.github/workflows/spotless.yml
@@ -28,7 +28,7 @@ jobs:
           filters: |
             code:
               - 'src/main/java/**'
-      - run: git fetch origin main-1.20.1-forge
+      - run: git fetch origin main
         if: steps.filter.outputs.code == 'true'
       - name: Setup Build
         if: steps.filter.outputs.code == 'true'
